--- a/docs/ReG_Steering_Web_Service.tex
+++ b/docs/ReG_Steering_Web_Service.tex
@@ -35,7 +35,7 @@ Version & Author & Notes & Date \\
 \hline
 0.1 & A.~R.~Porter & Initial draft --- work in progress alongside implementation & 06/07/2005\\
 0.2 & A.~R.~Porter & Work following addition of security and implementation of registry & 13/03/2006\\
-0.3 A.~R.~Porter & Updating prior to release of 2.0 of library & 05/07/2006\\
+0.3 & A.~R.~Porter & Updating prior to release of 2.0 of library & 05/07/2006\\
 \hline\hline
 \end{tabular}
 \end{center}
