--- a/TODO
+++ b/TODO
@@ -1,6 +1,3 @@
-Continue working on altering reg_wsrf_tools to 
-work with latest form of secure api. - TEST
-
 Remove some unecessary malloc's from the
 WSRF steering code.
 
@@ -18,3 +15,11 @@ Investigate libxml's configure scripts to see if can implement for
 the steering lib.
 
 flickering legend in history plots
+
+Fix bug that means that internal parameters aren't published to SWS 
+unless app. calls Register_param at least once
+
+Add query function to get library compile options
+
+Add function to set filename for file-based IOTypes
+
