Point to mailing list rather than me

--- a/README
+++ b/README
@@ -204,9 +204,8 @@ See the src/gsoap_stubs/README file for more details.
 
 ----------------------------------------------------------------------------
 
-Any comments, enquiries or pleas for explanation should be sent to:
+Any comments, enquiries or pleas for explanation should be directed to the
+comp-steering mailing list.  Details available from:
 
-Andrew Porter                Andrew.Porter@manchester.ac.uk
-SVE Group
-Manchester Computing
-University of Manchester
+http://lists.man.ac.uk/mailman/listinfo/comp-steering
+
