Move file-based config into file modules and make scratch dir configurable.
Since the move to modularization we should be at pains to make sure that
configuration data intended for each module is not polluting the common
code-base. There was a reference to the file-based steering directory location
in Steerer_connection_table_type even though such references for sockets- and
WSRF-based steering were removed.

This patch removes this anomally and further introduces the idea of a common
scratch directory (that can be used by all modules) that provides the base
for file-based steering messages from now on.

A default scratch dir of ./ is now defined by REG_SCRATCH_DEFAULT which can be
customized during the build via cmake.

--- a/README
+++ b/README
@@ -186,6 +186,13 @@ REG_USE_MODULE_Steering - default Sockets
 Choose the transport which is used to pass steering messages. Current
 choices are Sockets, WSRF or Files.
 
+REG_SCRATCH_DEFAULT - default .
+
+The directory to use for any temporary files that the library needs to
+create. If using File-based methods then steering messages and data
+are written into this directory. Checkpoints are also written to this
+directory.
+
 REG_KEEP_XML_MESSAGES - default OFF
 REG_USE_TIMING - default OFF
 
