Start port to native Windows/MSVC - static, monolithic, files-based transports.
Files-based monolithic, static library compiles with Visual Studio 9.0 2008, via
CMake 2.8.

Minor changes to some file-based io calls were required.

Windows specific config has been moved out of ReG_Steer_Config.h into
ReG_Steer_Win32.h which is called, if necessary, from there instead.

A Windows.cmake platform file has been added for specific defines, etc.

The POSIX directory browsing functions are provided by dirent.[c|h].

--- a/README
+++ b/README
@@ -3,8 +3,12 @@ RealityGrid project.
 
 Research Computing Services, IT Services, University of Manchester.
 
-It uses a Base64 codec by Bob Withers, and gSoap, an implementation of
-the Simple Object Access Protocol from Florida State University.
+It uses:
+ * A Base64 codec by Bob Withers.
+ * gSoap, an implementation of the Simple Object Access Protocol
+   from Florida State University.
+ * A Win32 port of the POSIX directory browsing functions by
+   Kevlin Henney.
 
 ----------------------------------------------------------------------
 
