--- a/README
+++ b/README
@@ -82,19 +82,38 @@ Create the directory:
  $ mkdir RealityGrid
  $ cd RealityGrid
 
-Unpack the source and rename the directory to 'src':
+As I am keen to keep the sources separate from the built software I
+create two directories, 'source' and 'build', in the RealityGrid
+directory. This is an especially good setup if you are going to build
+any of the other RealityGrid packages.
 
- $ tar xzf <source-code>.tgz
- $ mv <source-code> src
+Create the two directories and move into the 'source' one:
 
-Now create a build directory and change into it:
+ $ mkdir source build
+ $ cd source
 
- $ mkdir build
- $ cd build
+Unpack the source here:
+
+ $ tar xzf steer_lib.tgz
+
+Now move into the build directory, create a directory for the Steering
+Library to be built in (do this for each RealityGrid package you are
+building) and move into it:
+
+ $ cd ../build
+ $ mkdir steer_lib
+ $ cd steer_lib
 
 Now run CMake pointing it at the source code directory:
 
- $ ccmake ../src
+ $ ccmake ../../source/steer_lib
+
+NOTE: At this point it is worth pointing out that however you lay out
+your directory structure, when running CMake you need to point it at
+the root directory of the source code. If you are running CMake in the
+source code directory itself (not recommended) you would run:
+
+ $ ccmake .
 
 You will see a largely blank screen with a set of instructions at the
 bottom. CMake works by the user making changes to the options it
@@ -136,6 +155,10 @@ Finally, to build the Steering library simply use 'make':
 Or if you're installing the Library somewhere:
 
  $ make install
+
+There is a lot more information about CMake and how to use it on
+different platforms on their wiki:
+http://www.cmake.org/Wiki/CMake
 
 ----------------------------------------------------------------------
 
